<resources>
    <string name="app_name">Autismind</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="image_folder_path">/Android/Data/ImageStorage</string>
    <string name="Text">Text</string>
    <string name="SorryText">SORRY! FOR SOMETHING WENT WRONG.</string>
    <string name="btnText">PLEASE REPORT TO US </string>
    <string name="price">Download 1.50 €</string>
    <string name="ok">OK</string>
    <string name="BackPermission">Do you want to go back?</string>
    <string name="DeletePermission">Do you want to delete?</string>
    <string name="addText">Please add text</string>
    <string name="done">DONE</string>
    <string name="Ok">OK</string>
    <string name="accept">OK</string>
    <string name="permission">Do you want to download</string>
    <string name="LoadingMessage">Downloading ...</string>
    <string name="ResultProcessing"> Please, wait result processing</string>
    <string name="MindApp">/Autismind</string>
    <string name="MindAppSlash">/Autismind/</string>
    <string name="zip">.zip</string>
    <string name="map">.map</string>
    <string name="sdcardLocation">/sdcard/Autismind/</string>
    <string name="UnzippinMessage">Please wait while installing..</string>
    <string name="Loading_msg">Loading..</string>
    <string name="DowanloadPermission"> To start the app we need to download the exercise. Do you want to download now?</string>
    <string name="emptyErrorMsg">ERROR</string>
    <string name="Name">Name</string>
    <string name="AddName">Please add name</string>
    <string name="appBillingService">n-app billing service is unavailable, please upgrade Android Market/Play to version >= 3.9.16</string>
    <string name="productPurchased">onProductPurchased</string>
    <string name="notSupported">file not supported</string>
    <string name="Cohete">Rocket</string>
    <string name="Princesa">Princess</string>
    <string name="Coche">Car</string>
    <string name="Dinosaurio">Dinosaur</string>
    <string name="Unicornio">Unicorn</string>
    <string name="autismindLink">www.autismind.com</string>
    <string name="spanishName">With the support of</string>
    <string name="author">
        <pre align="left"><b> Author:</b> </pre><span>                           Alex Escolá Serra \n</span>
        <pre align="left"><b> Collaboration and advice:</b> </pre><span>    Noemí Balmaña y Sergi Corbella \n</span>
        <pre align="left"><b> Illustration:</b> </pre><span>                     Joan Lalucat \n</span>
        <pre align="left"><b> Development App:</b> </pre><span>                  Jorge García Caballero </span>

</string>
    <string name="condition">
        <pre align="center"><b>  Thanks …</b> </pre>

   </string>
    <string name="conditionDesc">
       To all the families who have helped us selflessly to build the AutisMIND project,
       Especially Marc, Jan, Martina and their parents, who have given us their voice, their dedication and their time.
       Also to Nieves, Ester, Terin, Rita, Nacho, Mar, Meritxell, Sara, Marta, Cristian and Alex for their
       Patience and unconditional support and, finally, all the partners of the IDAPP center and the CDIAP Delta,
       For advice, encouragement and help throughout the process.

   </string>
    <string name="LevelOne">Level 1</string>
    <string name="LevelTwo">Level 2</string>
    <string name="LevelThree">Level 3</string>
    <string name="LevelFour">Level 4</string>
    <string name="LevelFive">Level 5</string>
    <string name="LevelSix">Level 6</string>
    <string name="taskOne">Task 1</string>
    <string name="taskTwo">Task 2</string>
    <string name="taskThree">Task 3</string>
    <string name="taskFour">Task 4</string>
    <string name="taskFive">Task 5</string>
    <string name="taskSix">Task 6</string>
    <string name="taskSeven">Task 7</string>
    <string name="taskEight">Task 8</string>
    <string name="taskNine">Task 9</string>
    <string name="taskTen">Task 10</string>
    <string name="firstLayer1">En este tema se estimula el contacto visual y la atención compartida mediante ejercicios que muestran el sentido y finalidad de la mirada y del señalamiento, así como la importancia de coordinar la atención con el interlocutor para comunicar necesidades, deseos o intenciones en el otro.  </string>
    <string name="firstLayer2">En este tema se trabaja con fotografía real para practicar el reconocimiento facial de diferentes emociones (alegría, tristeza, rabia, sorpresa y miedo). De esta forma, al identificar cómo se sienten los demás, resulta más sencillo empatizar y responder de la forma esperada al contexto.</string>
    <string name="firstLayer3">En este tema se trabaja con fotografía real para practicar el reconocimiento facial de diferentes emociones más complejas (aburrimiento, asco, vergüenza y nerviosismo). De esta forma, al identificar cómo se sienten los demás, resulta más sencillo empatizar y responder de la forma esperada al contexto.</string>
    <string name="firstLayer4">Para una buena interpretación de la realidad es necesario el razonamiento abstracto, que nos permite ver el todo más allá de los detalles o las partes. En este tema se trabaja la percepción global mediante ejercicios gestálticos, para ayudar al niño a tener en cuenta toda la información integrada en un todo, ya que la percepción fragmentada interfiere en la comunicación y la comprensión social.</string>
    <string name="firstLayer5">En este tema se trata de aprender a interpretar el contexto que rodea una emoción. A través de situaciones donde no se ve la cara del protagonista, el niño deberá inferir la emoción que experimenta teniendo en cuenta la situación: el entorno, los antecedentes, el lenguaje no verbal, la reacción de los demás, etc. </string>
    <string name="firstLayer6">Este apartado presenta secuencias inacabadas que el niño deberá completar con la opción más probable, reforzando la habilidad de ponerse en el lugar del personaje y pensar la situación más lógica y esperable. Muchas veces la dificultad de anticipar lo que sucederá genera a los niños incertidumbre y ansiedad. En este tema se trata de aprender a interpretar la situación global, entender qué está sucediendo y anticipar la siguiente viñeta. </string>
    <string name="firstLayer7">En este tema se aborda el hambre, la sed, el sueño, el dolor, las ganas de ir al lavabo, el frío y el calor, etc. Dadas las alteraciones sensoriales y las dificultades de autoconsciencia que pueden tener algunos niños, puede ser difícil entender o identificar determinadas sensaciones corporales, tanto en sí mismos como en los demás. Por ello se trabaja con explicaciones claras y ejercicios visuales que ayudaran al reconocimiento, de forma que aprendan responder y actuar en consecuencia.</string>
    <string name="firstLayer8">Este tema plantea ejercicios que requieren imaginación; pensamiento simbólico y creativo para entender que a veces se puede simular, inventar o jugar de manera ficticia (dar de comer a un muñeco, simular que el avión vuela por el cielo, etc.). Desde la atribución de propiedades imaginadas a un objeto, hasta la sustitución de objetos o el juego de roles, el desarrollo del juego simbólico correlaciona con una mayor capacidad posterior para desarrollar el lenguaje, razonamiento abstracto y la teoría de la mente. </string>
    <string name="firstLayer9">La idea de este tema es conocer bien los 5 sentidos básicos (vista, olfato, tacto, gusto y oído). Por un lado puede ser de ayuda para trabajar las alteraciones sensoriales y, por otro, pretende enseñar que sólo podemos saber aquello que percibimos a través de los sentidos, requisito básico para inferir lo que saben o piensan los demás, en función de la información que perciben.</string>
    <string name="firstLayer10">En este apartado se trata de aprender la idea de que la perspectiva visual cambia según el punto desde el que se mire. Esta afirmación puede ser difícil para niños con alteraciones en la ToM, que pueden pensar que todos ven lo mismo que ellos, al no ser capaces de ponerse en el lugar del otro. Mediante el juego con las perspectivas, se pueden dar cuenta de la existencia de diferentes puntos de vista, reforzando la flexibilidad cognitiva y facilitando la ToM.</string>
    <string name="statisticsDes">#User level wise statistics</string>
    <string name="downloadFailed">Download failed please try again.</string>
    <string name="tvNoData">You haven\'t started playing yet.</string>
    <string name="installFailed">install failed please try again.</string>
    <string name="installComplete">Installation complete.</string>
    <string name="connectInternet">Please Connect your internet connection</string>
    <string name="notAllow">You are not allow to play this</string>
    <string name="broad_cast_msg">This is test message</string>
    <string name="update_level_one">1</string>
    <string name="update_level_two">15</string>
    <string name="update_level_three">50</string>
    <string name="update_level_four">100</string>
    <string name="update_level_five">160</string>
    <string name="pleaseWait">please wait..</string>
    <string name="problemSettingUpBilling">"Problem setting up in-app billing: "</string>
    <string name="Error_querying_inventory">Error querying inventory. Another async operation in progress.</string>
    <string name="Error_purchasing">"Error purchasing: "</string>
    <string name="Error_purchasing_authincity">Error purchasing. Authenticity verification failed.</string>
    <string name="Error_consuming">"Error while consuming: "</string>
    <string name="Failed_query_inventory">"Failed to query inventory: "</string>
    <string name="Error_inventory_another">Error querying inventory. Another async operation in progress.</string>
    <string name="no">NO</string>
    <string name="abc">ABC</string>
    <string name="voice_help">Voice help</string>
    <string name="music">Music</string>
    <string name="progress_bar">Progress bar</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="storageCheck">Insufficient space on your device, please free up space and try again later, your purchase was successful </string>
    <string name="storageCheckPdf">Insufficient space on your device, please free up space and try again later</string>
    <string name="taskPackDownloadPermit">Downloading exercises, be patient, thank you.</string>
    <string name="pdfGenerateSuccess">Creation complete</string>
    <string name="levelMissing">Corrupted level</string>
    <string name="levelOneErrorString">Oops! No, no ... Look carefully and you sure do.</string>
    <string name="levelTwoErrorString">Mmm ... I do not think so. Try again!</string>
    <string name="levelThreeErrorString">I do not think so. Try again!</string>
    <string name="levelFourErrorString">I think not!</string>
    <string name="levelFiveErrorString">Mmm ... I\'d say no, think again and try again.</string>
    <string name="levelSixErrorString">Nnn Nnn ... Nooo!</string>
    <string name="userSelection">"Please select or create a user first"</string>
    <string name="userCreate">"Please create a user first"</string>
    <string name="userSelect">"Please select a user first"</string>
    <string name="sync_permition">The lessons have been updated in the server. It is highly recommended to update the lessons (This may take more than 15 mins based on your internet connection and the lessons you have purchased already).</string>
    <string name="synMessage">Please wait while synchronizing .....</string>
    <string name="update">Update</string>
    <string name="mCancel">Cancel</string>
</resources>